Practicing 2D Vector searching
Working with 2D vectors, getting the "search" function to operate, and displaying the vector<location> vector correctly

--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -19,10 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DynIntStack.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="DynIntStack.cpp" />
+    <ClCompile Include="2DSearchPractice.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
