Renamed files/added code
Renamed a couple files to better reflect their contents. Also ended up creating an attempt file that was refined and keeping it.

--- a/Data Structures.vcxproj.filters
+++ b/Data Structures.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DeletionTimes.cpp">
+    <ClCompile Include="Search2DRefined.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
