--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DeletionTimes.cpp" />
+    <ClCompile Include="Search2DRefined.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
