--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -20,9 +20,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IntStack.cpp" />
+    <ClCompile Include="ListInsertion.cpp" />
+    <ClCompile Include="MathStack.cpp" />
+    <ClCompile Include="Pr18-2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntStack.h" />
+    <ClInclude Include="MathStack.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
