Mostly done with csvSearch
Renamed csvSearch -> csvSearchPractice. Attempt to make it more efficient if possible. Also still have to convert integers to columns for display purposes

--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="csvSearch.cpp" />
+    <ClCompile Include="csvSearchPractice.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Data.csv" />
