Creation of CSVsearch
Attempting to make the code efficient

--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="csvSearchPractice.cpp" />
+    <ClCompile Include="CSVsearch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Data.csv" />
