--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -19,10 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CSVsearch.cpp" />
+    <ClCompile Include="csvSearch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Data.csv" />
+    <None Include="Data2.csv" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
