--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Data.csv" />
-    <None Include="Data2.csv" />
+    <ClCompile Include="IntStack.cpp" />
+    <ClCompile Include="MathStack.cpp" />
+    <ClCompile Include="Pr18-2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="csvSearch.cpp" />
+    <ClInclude Include="IntStack.h" />
+    <ClInclude Include="MathStack.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
