--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <ClCompile Include="attempt.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Values.csv" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
