--- a/Data Structures.vcxproj
+++ b/Data Structures.vcxproj
@@ -19,7 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="StackExercise.cpp" />
+    <ClCompile Include="unigramsattempt.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="unigrams.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
