Attempting to create UnigramCounter

--- a/Data Structures.vcxproj.filters
+++ b/Data Structures.vcxproj.filters
@@ -18,5 +18,14 @@
     <ClCompile Include="UnigramsCounter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="unigramsattempt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="unigramsattempt v2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="csvSearch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
