--- a/Data Structures.vcxproj.filters
+++ b/Data Structures.vcxproj.filters
@@ -15,16 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="UnigramsCounter.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="unigramsattempt.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="unigramsattempt v2.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="csvSearch.cpp">
+    <ClCompile Include="Unigrams v1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
