--- a/Data Structures.vcxproj.filters
+++ b/Data Structures.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AVL Tree.cpp">
+    <ClCompile Include="Unigrams NonArray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
